kubernetes/apps/cortex/litellm/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/networking.k8s.io/networkpolicy_v1.json
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: litellm-pgbouncer
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: litellm
              app.kubernetes.io/managed-by: litellm-operator
      ports:
        - port: 5432
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: litellm-pgbouncer
  policyTypes:
    - Ingress
